--- a/src/Modules/Laser.Orchard.ContentExtension/App_Data/Localization/it-IT/orchard.module.po
+++ b/src/Modules/Laser.Orchard.ContentExtension/App_Data/Localization/it-IT/orchard.module.po
@@ -281,6 +281,10 @@ msgid "No content with this Id"
 msgstr "Contenuto inesistente"
 
 msgctxt "Laser.Orchard.ContentExtension.Controllers.ElementDetail"
+msgid "No content with this Id"
+msgstr "Contenuto inesistente"
+
+msgctxt "Laser.Orchard.ContentExtension.Controllers.ElementDetail"
 msgid "You don't have permission \"Manage settings\" to define and manage User Groups!"
 msgstr "Non hai il permesso \"Manage settings\" per definire e gestire i gruppi di utenti."
 
