--- a/src/Modules/Laser.Orchard.GDPR/App_Data/Localization/it-IT/orchard.module.po
+++ b/src/Modules/Laser.Orchard.GDPR/App_Data/Localization/it-IT/orchard.module.po
@@ -232,6 +232,22 @@ msgctxt "~/Modules/Laser.Orchard.GDPR/Views/Parts/GDPRPart.AdminToolbarLink.csht
 msgid " | "
 msgstr "|"
 
+msgctxt "Laser.Orchard.GDPR.Activities.AnonymizationProcessTask"
+msgid "Anonymize the selected ContentItems"
+msgstr "Anonimizza i Contenuti selezionati."
+
+msgctxt "Laser.Orchard.GDPR.Activities.ContentAnonymizedActivity"
+msgid "Content is Anonymized. The GDPRContentContext token contains further information."
+msgstr "Contenuto anonimizzato. Il token GDPRContentContext contiene informazioni addizionali."
+
+msgctxt "Laser.Orchard.GDPR.Activities.ContentErasedActivity"
+msgid "Content is Erased. The GDPRContentContext token contains further information."
+msgstr "Contenuto cancellato. Il token GDPRContentContext contiene informazioni addizionali."
+
+msgctxt "Laser.Orchard.GDPR.Activities.ErasureProcessTask"
+msgid "Erase the selected ContentItems"
+msgstr "Cancella i Contentuti selezionati"
+
 msgctxt "Laser.Orchard.GDPR.Activities.GDPRContentActivity"
 msgid "Content is Anonymized. The GDPRContentContext token contains further information."
 msgstr "Contenuto anonimizzato. Il token GDPRContentContext contiene informazioni addizionali."
