--- a/src/Modules/Laser.Orchard.Cookies/App_Data/Localization/it-IT/orchard.module.po
+++ b/src/Modules/Laser.Orchard.Cookies/App_Data/Localization/it-IT/orchard.module.po
@@ -34,7 +34,7 @@ msgstr "Impostazione legge sui cookies"
 
 msgctxt "~/Modules/Laser.Orchard.Cookies/Views/EditorTemplates/Parts.Cookie.Settings.cshtml"
 msgid "Default value for Marketing cookies acceptance"
-msgstr "Valore di default per l'accettazione dei cookie di Marketing"
+msgstr "Imposta di default l'accettazione dei cookie di Marketing"
 
 msgctxt "~/Modules/Laser.Orchard.Cookies/Views/EditorTemplates/Parts.Cookie.Settings.cshtml"
 msgid "Default value for Preferences cookies acceptance"
